2002-02-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSValue.m: Fixed bug in archiving NSValue objects ... was
	creating faulty archives which would crash on unarchiving.
	* Headers/Foundation/NSObjCRuntime.h: Made GS... function names more
	consistent with NeXT/Apple ones.  Provide new ivar handling API.
	Don't crash when asked for a class which does not exist.
	* Source/NSObject.m: partial conversion to new runtime api.
	* Source/NSData.m: partial conversion to new runtime api.  Don't
	raise an exception if a class we are deserializing does not exist.
	Just warn and return a nul class.
	* Source/NSArchiver.m: better clasname handling. 
	* Source/NSUnarchiver.m: try to gracefully handle the case where an
	archive contains the name of a class we don't have linked in to our
	code.
	* Source/NSPortCoder.m: ditto.

2002-02-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: locking erro fixed by Stephen brandon

2002-02-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSInvocation.h: Remove _argframe ivar
	* Source/NSInvocation.m: Simplify by removing _argframe ivar and
	using _frame throughout to hold arguments. Fix checks for valid frame.
	* Source/callframe.m: Initialise newly created frame with zeros so
	that setting an object in an invocation should work when the
	invocation is retaining its contents.
	* configure.in: Disable ffi and warn about it.
	* configure: regenerated
	* Source/NSRunLoop.m: ([acceptInputForMode:beforeDate:]) block until
	limit date even if no I/O is possible.
	* Source/NSUserDefaults.m: Patch by Alexander Malmberg to try all
	listed locales rather than giving up at first failure.
	* Headers/gnustep/base/GSUnion.h: Enclose types bitmask in brackets
	to avoid *all* types being included in the union!  Should decrease
	memory footprint and increase speed of many classes.
	* Source/NSString.m: ([stringByStandardizingPath]) memory leak
	fixed and windows path check fixed ... patch by Michael Scheibler.